[package]
name = "tar"
authors = ["Jason de Wolff <jasondewolff@gmail.com>"]
edition = "2021"
license = "Jason de Wolff Proprietary"
publish = false
repository = "https://github.com/JasondeWolff/tar"
version = "0.1.0"
rust-version = "1.85"
homepage = "https://github.com/JasondeWolff/tar"

[dependencies]
# anyhow = { version = "1.0.94", default-features = false, features = ["std"] }
# async-fs = { version = "2.1.2", default-features = true }
# bitflags = { version = "2.6.0", default-features = false }
# bytecheck = { version = "0.8.0", default-features = false }
bytemuck = { version = "1.24", default-features = false, features = ["derive", "extern_crate_alloc", "min_const_generics"] }
cfg-if = { version = "1.0.0", default-features = false }
clap = { version = "4.5.35", default-features = true, features = ["derive"] }
# console_error_panic_hook = { version = "0.1.7", default-features = true }
# console_log = { version = "1.0.0", default-features = true }
# ctor = { version = "0.2.9", default-features = false }
egui = { version = "0.31.1", default-features = true, features = ["bytemuck"] }
# egui-phosphor = { version = "0.9.0", default-features = true }
egui-winit = { version = "0.31.1", default-features = false, features = ["webbrowser"] }
env_logger = { version = "0.11.5", default-features = true }
fern = { version = "0.7.1", default-features = true }
# flate2 = { version = "1.0.28", default-features = true }
# flume = { version = "0.11.0", default-features = false, features = ["async"]}
futures = { version = "0.3.30", default-features = false, features = ["executor", "thread-pool"] }
# getrandom = { version = "0.2", features = ["js"] }
# glam = { version = "0.30.8", default-features = true, features = ["bytemuck"] }
# gltf = { version = "1.0.0", default-features = true, features = ["KHR_materials_emissive_strength", "KHR_materials_ior", "KHR_materials_transmission"] }
# half = { version = "2.4.0", default-features = false, features = ["num-traits", "bytemuck"] }
# image = { version = "0.25.5", default-features = false, features = ["png", "jpeg", "bmp"] }
# lazy_static = { version = "1.4.0", default-features = false }
log = { version = "0.4.20", default-features = false }
# lz4_flex = { version = "0.11.5", default-features = false }
# more-asserts = { version = "0.3.1", default-features = true }
# parking_lot = { version = "0.12.3", default-features = false }
# pollster = { version = "0.4.0", default-features = false, features = ["macro"] }
# puffin = { version = "0.19.0", default-features = false, features = ["web"] }
# puffin_egui = { git = "https://github.com/TemporalInteractive/puffin.git", default-features = true }
# rayon = { version = "1.8.1", default-features = false }
# rkyv = { version = "0.8.9", default-features = false, features = ["size_64", "std", "validation"] }
# rmpv = { version = "1.0.1", default-features = false, features = ["with-serde"] }
# rmp-serde = { version = "1.1.2", default-features = false }
# serde = { version = "1.0.216", default-features = false, features = ["derive", "rc", "std"] }
# serde_json = { version = "1.0.114", default-features = false, features = ["std"] }
# shaderc = { version = "0.8", default-features = false }
# specs = { version = "0.20.0", default-features = true }
# strum = { version = "0.27.2", default-features = false, features = ["derive"] }
# superluminal-perf = { version = "0.3.0", default-features = false }
# thiserror = { version = "2.0.7", default-features = true }
type-map = { version = "0.5.0", default-features = false }
# uuid = { version = "1.12.1", default-features = false, features = ["v4"] }
# wasm-bindgen = { version = "0.2.84", default-features = true }
# wasm-bindgen-futures = { version = "0.4.49", default-features = true }
# wasm-bindgen-test = { version = "0.3", default-features = true }
# web-sys = { version = "0.3.72", default-features = true }
# web-time = { version = "0.2.4", default-features = true }
winit = { version = "0.30.5", default-features = false, features = ["rwh_06"] }
wgpu = { version = "25.0.0", default-features = false, features = ["vulkan", "webgpu", "wgsl"] }
# wgsl-includes = { git = "https://github.com/TemporalInteractive/wgsl-includes.git", default-features = false }
# xshell = { version = "0.2.7", default-features = true }